<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".fragments.startup.SignUpFragment"
                                                   android:id="@+id/frameLayout6"
                                                   android:background="@color/colorPrimaryDark">

    <Button
            android:text="@string/signup_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/signUpBtn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:theme="@style/Butt"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout10"
            app:layout_constraintVertical_bias="0.0"/>

    <Button
            android:text="@string/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginBtn"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:theme="@style/Butt"
            android:textColor="@color/colorAccent"/>

    <TextView
            android:text="@string/auser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/loginBtn"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"/>

    <com.google.android.material.textfield.TextInputLayout
            android:theme="@style/TextInputStartUp"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textInputLayout9"
            android:layout_marginTop="244dp"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_email"
                android:textColor="@color/colorLight"
                android:id="@+id/signupEmail"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:theme="@style/TextInputStartUp"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout9"
            android:id="@+id/textInputLayout10">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_password"
                android:textColor="@color/colorLight"
                android:inputType="textPassword"
                android:id="@+id/signupPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>