<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/settings_dest"
            android:icon="@drawable/ic_settings"
            android:menuCategory="secondary"
            android:title="@string/settings" />
    <item
            android:id="@+id/logOutFragment"
            android:icon="@drawable/ic_logout"
            android:menuCategory="secondary"
            android:title="@string/logout" />
</menu>
