...
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userName"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
...
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userBio"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:textSize="18sp"
            android:textAlignment="center"
...
