...

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorLight"
                android:hint="@string/user_email"
                android:id="@+id/login_username"
                />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:theme="@style/TextInputStartUp"
            android:layout_width="395dp"
...
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorLight"
                android:hint="@string/user_password"
                android:inputType="textPassword"
                android:id="@+id/login_password"
                />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:text="@string/notuser"
            android:layout_width="wrap_content"
...
